# gnu_linux_development

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  fun.c
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  scenario1.gdb  scenario1_answers  scenario2.gdb  scenario2_answers
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protection_lib.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: ru.po  translate.pot
08_I18n/src/: guess.c
09_PatchDiff/: Makefile  diff1.patch  diff2.patch  diff3.patch  lab.c
11_Documenting/: Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: guess.c
12_InstallPackaging/: Doxyfile.in  Makefile.am  configure.ac
12_InstallPackaging/po/: POTFILES.in  guess.pot  translate_new.pot
12_InstallPackaging/src/: guess.h
12_InstallPackaging/tests/: Makefile.am  tests.ts
